# my_rust_try_on

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
web/: Cargo.toml  Dockerfile  todo.db
web/src/: main.rs
web/static/js/: stopwatch.js
web/templates/: stopwatch.html
