[package]
name = "smart_dog"
version = "0.1.0"
authors = ["c3drive <mihara000satsuki@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 2.2.0 is incompatible versions of actix crates.
# actix-rt = "2.2.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
