[package]
name = "rust_try_on"
version = "0.1.0"
authors = ["c3drive <mihara000satsuki@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 2.2.0 is incompatible versions of actix crates.
# actix-rt = "2.2.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-files = "0.5.0"
askama = "0.10.5"
rusqlite = { version = "0.25.3", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
thiserror = "1.0.26"
serde = { version = "1.0.126", features = ["derive"] }
